--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(hoi
     src/interface.cpp
     src/countries.cpp
     src/button.cpp
+    src/ButtonBuilder.cpp
 )
 
 find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
